Cabal-Version:      2.4
Name:               minswap-core
Version:            0.1.0.0
Author:              Minswap Labs
Maintainer:          long@minswap.org
Build-Type:          Simple
Copyright:           © 2021 Minswap Labs
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Minswap.OffChain
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , containers
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-pab
                     , text
                     , lens -any
                     , freer-simple
                     , prettyprinter
  default-language:    Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable MultiParamTypeClasses
  ghc-options: -Wall -Wnoncanonical-monad-instances
                -Wincomplete-uni-patterns -Wincomplete-record-updates
                -Wredundant-constraints -Widentities
                -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable Main
  main-is: Main.hs
  hs-source-dirs:      src/Minswap
  ghc-options:         -Wall -Wnoncanonical-monad-instances
                        -Wincomplete-uni-patterns -Wincomplete-record-updates
                        -Wredundant-constraints -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , freer-extras
                     , freer-simple
                     , containers
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , plutus-use-cases
                     , text
                     , freer-simple
                     , prettyprinter
                     , minswap-core
                     , bytestring